chore: updated the resources; ui: changed the navbar and added links

--- a/index.html
+++ b/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="images/swag2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/swag2 (2).png" type="image/x-icon">
+    <link rel="stylesheet" href="">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
+
     <div class="container">
+
     <!-- Navigation Bar -->
     <div class="header">
+        <div class="logo">
+            <a href="">
+                <img src="images/swag.png" alt="my logo">
+            </a>
+        </div>
+
         <nav class="navbar">
-            <div class="logo", id="header-logo">
-                <img src="images/swag2.png" alt="my logo">
-            </div>
             <ul class="nav-links">
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#projects">projects</a></li>
+                <li><a href="#skills">skills</a></li>
+                <li><a href="#about">about me</a></li>
+                <li><a href="#contact">contact</a></li>
+
+                <a href="https://github.com/ajarelle">
+                    <img src="images/github-white.png" alt="github-logo">
+                </a>
+                
+                <a href="www.linkedin.com/in/adrianjarelle/">
+                    <img src="images/linkedin-white.png" alt="lnkedin-logo">
+                </a>
+
             </ul>
         </nav>
     </div>
+    <!-- End of Nav Bar -->
+
 
     <!-- Featured Photo -->
     <section class="featured-photo">
