--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="nav-links">
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#skills">skills</a></li>
-                <li><a href="#about">about me</a></li>
+                <li><a href="#autobiography">about me</a></li>
                 <li><a href="#contact">contact</a></li>
 
                 <a href="https://github.com/ajarelle">
@@ -45,6 +45,12 @@
     <!-- Featured Photo -->
     <section class="featured-photo">
         <img src="images/featured.jpg" alt="Featured Work">
+        <div class="text">
+            I'm Adrian Jarelle
+        </div>
+        <div class="description">
+            Aspiring Data Scientist
+        </div>
     </section>
 
     <!-- Previous Projects -->
@@ -60,11 +66,11 @@
 
     <!-- Skills and Autobiography -->
     <section class="skills-autobiography">
-        <div class="skills">
+        <div class="skills", id="skills">
             <h2>Skills</h2>
             <img src="images/skills.jpg" alt="Skills Overview">
         </div>
-        <div class="autobiography">
+        <div class="autobiography", id="autobiography">
             <h2>Autobiography</h2>
             <img src="images/about.jpg" alt="About Me">
         </div>
@@ -72,7 +78,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
+        <div class="footer-content", id="contact">
             <p>© 2024 My Portfolio | email: riverajarelle@gmail.com</p>
             <a href="#top">Back to Top</a>
         </div>
