chore: finalized the skills and about me sections

--- a/index.html
+++ b/index.html
@@ -97,14 +97,32 @@
             <div class="skills-container">
                 <div class="skills-icons">
                     <img src="images/python-logo.png" alt="python-logo">
+                    <div class="skill-desc">
+                        <h3>Python</h3>
+                        <p>Proficient in Python programming language. 
+                            Familiar with libraries such as pandas, numpy, matplotlib, and seaborn.
+                        </p>
+                    </div>
                 </div>
     
                 <div class="skills-icons">
                     <img src="images/Rlogo.png" alt="R-logo">
+                    <div class="skill-desc">
+                        <h3>R</h3>
+                        <p>Proficient in R programming language. 
+                            Familiar with libraries such as dplyr, ggplot2, and shiny.
+                        </p>
+                    </div>
                 </div>
     
                 <div class="skills-icons">
                     <img src="images/SQL.png" alt="sql-logo">
+                    <div class="skill-desc">
+                        <h3>SQL</h3>
+                        <p>Proficient in SQL. 
+                            Familiar with database management systems such as MySQL and MariaDB.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -117,7 +135,11 @@
                 I am passionate about data science and its applications in various fields. I have experience in programming languages such as Python and R, and I am also proficient in SQL.
                 I am also familiar with data visualization tools such as Tableau and Power BI. I am currently looking for opportunities to apply my skills and knowledge in the field of data science. 
                 Feel free to contact me for collaborations or projects.
-            </p>     
+            </p> 
+
+            <div class="image-me">
+                <img src="images/about-me.png" alt="Adrian Jarelle">
+            </div>
         </div>
 
     </section>
